be-delete/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  delete-deployment
  namespace: default
  labels:
    app:  delete
spec:
  selector:
    matchLabels:
      app: delete
  replicas: 2
  template:
    metadata:
      labels:
        app:  delete
    spec:
      containers:
      - name:  delete-pod
        image:  astelware/gr18:delete-corrected
        ports:
        - containerPort:  8000
