be-delete/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delete-ingress
  namespace: default
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: g18delete.astelware.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: delete-service
            port:
              number: 80
